log-schemas/27.5/opcua_binary_opensecure_channel.rst
``opcua_binary_opensecure_channel`` field reference
---------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``opcua_link_id`` (string)
     - The opcua_link_id information.

   * - ``client_proto_ver`` (integer - count)
     - The client_proto_ver information.

   * - ``sec_token_request_type`` (integer - count)
     - The sec_token_request_type information.

   * - ``message_security_mode`` (integer - count)
     - The message_security_mode information.

   * - ``client_nonce`` (string)
     - The client_nonce information.

   * - ``req_lifetime`` (integer - count)
     - The req_lifetime information.

   * - ``server_proto_ver`` (integer - count)
     - The server_proto_ver information.

   * - ``sec_token_sec_channel_id`` (integer - count)
     - The sec_token_sec_channel_id information.

   * - ``sec_token_id`` (integer - count)
     - The sec_token_id information.

   * - ``sec_token_created_at`` (time)
     - The sec_token_created_at information.

   * - ``sec_token_revised_time`` (integer - count)
     - The sec_token_revised_time information.

   * - ``server_nonce`` (string)
     - The server_nonce information.
